--- a/src/app/pages/digitalizador/digitalizador.component.scss
+++ b/src/app/pages/digitalizador/digitalizador.component.scss
@@ -1,79 +1,120 @@
-.directory-selector-container {
-  font-family: Arial, sans-serif;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
-
-h2 {
-  color: #333;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.input-group {
-  margin-bottom: 20px;
-}
-
-label {
-  display: block;
-  margin-bottom: 8px;
-  font-weight: bold;
-  color: #555;
-}
-
-.file-input-wrapper {
+.btn {
+  column-gap: 1rem;
   display: flex;
-  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
-input[type="text"] {
-  flex: 1;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #f9f9f9;
-  cursor: pointer;
-}
-
-.button {
-  padding: 10px 15px;
-  background-color: #f0f0f0;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.button:hover {
-  background-color: #e0e0e0;
-}
-
-.button-container {
+main.container {
   display: flex;
+  column-gap: 2rem;
+}
+
+.digitalizador {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+
+  &__toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.toolbar__side {
+  display: flex;
+  column-gap: 1rem;
+  align-items: center;
+}
+
+.digitalizador__toolbar,
+.digitalizador__estado,
+.busqueda {
+  padding: 20px 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(3, 7, 18, 0.08);
+  box-shadow: 0px 1px 1px rgba(3, 7, 18, 0.08),
+    0px 5px 4px rgba(3, 7, 18, 0.06),
+    0px 12px 9px rgba(3, 7, 18, 0.05),
+    0px 20px 15px rgba(3, 7, 18, 0.03),
+    0px 32px 24px rgba(3, 7, 18, 0.02);
+}
+
+.busqueda {
+  &__list {
+    overflow-y: scroll;
+    max-height: 400px;
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      row-gap: 2px;
+
+      &__archivo {
+        line-height: 1;
+      }
+
+      &__status {
+        line-height: 1;
+        opacity: 0.9;
+      }
+    }
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+
+  &__row {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 1rem;
+  }
+
+  &__item {
+    width: 100%;
+  }
+}
+
+.chart {
+  display: flex;
+  justify-content: space-around;
+}
+
+.numeros {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-top: 30px;
+  align-items: flex-start;
+
+  &__item {
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 1rem;
+  }
 }
 
-.save-button {
-  padding: 12px 30px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+.button-icon {
+  aspect-ratio: 1;
+  width: 26px;
+  font-size: 1rem;
 }
 
-.save-button:hover {
-  background-color: #45a049;
-}
+.monitoring {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1rem;
 
-.save-button:disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
+  &__text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    line-height: 1;
+  }
 }
