--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -1,4 +1,4 @@
-<main class="container py-5 mx-auto">
+<main class="container main py-5 mx-auto">
   <section class="digitalizador">
     <div class="digitalizador__toolbar">
       <div class="toolbar__side">
@@ -61,8 +61,9 @@
     </div>
     <div class="digitalizador__estado">
       <form [formGroup]="formFiltrosDigitalizador" class="form" style="max-width: 100%;">
-        <div class="form__row">
-          <div class="form__item"><mat-form-field class="w-100">
+        <div class="form__row form__row--responsive">
+          <div class="form__item">
+            <mat-form-field class="w-full">
               <mat-label>Fecha digitalización</mat-label>
               <mat-date-range-input [rangePicker]="picker">
                 <input matStartDate formControlName="fechaInicio" placeholder="Inicio" />
@@ -71,16 +72,20 @@
               <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
               <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-date-range-picker #picker></mat-date-range-picker>
-            </mat-form-field></div>
+            </mat-form-field>
+          </div>
           <div class="form__item">
-            <mat-form-field class="w-100">
-              <mat-label>Tipo</mat-label>
-              <mat-select formControlName="tipo">
+            <mat-form-field class="w-full">
+              <mat-label>Grupo</mat-label>
+              <mat-select formControlName="grupo" [disabled]="formFiltrosDigitalizador.get('grupo')?.disabled ?? false">
                 <mat-option value="">- Selecciona una opción -</mat-option>
                 @for (tdd of tipos; track tdd) {
                 <mat-option [value]="tdd.id">{{tdd.tipo_doc_dig}}</mat-option>
                 }
               </mat-select>
+              <mat-hint *ngIf="formFiltrosDigitalizador.get('grupo')?.disabled">
+                Selecciona un tipo y fechas válidas para habilitar
+              </mat-hint>
             </mat-form-field>
           </div>
         </div>
@@ -88,10 +93,10 @@
           <div class="form__item">
             <mat-form-field class="w-full">
               <mat-label>Grupo</mat-label>
-              <mat-select class="w-full" formControlName="grupo">
+              <mat-select formControlName="grupo">
                 <mat-option value="">- Selecciona una opción -</mat-option>
-                @for (nau of grupos; track nau) {
-                <mat-option [value]="nau.nombre">{{nau.nombre}}</mat-option>
+                @for (grupo of grupos; track grupo) {
+                <mat-option [value]="grupo.nombre_archivo_upload">{{grupo.nombre_archivo_upload}}</mat-option>
                 }
               </mat-select>
             </mat-form-field>
@@ -282,8 +287,8 @@
               <mat-form-field class="w-full">
                 <mat-label>Tipo Documento a Digitalizar</mat-label>
                 <mat-select class="w-full" formControlName="id_tipo_doc_dig">
-                  <mat-option class="w-full" *ngFor="let tipo of tipos"
-                    [value]="tipo.id">{{ tipo.tipo_doc_dig }}</mat-option>
+                  <mat-option class="w-full" *ngFor="let tipo of tipos" [value]="tipo.id">{{ tipo.tipo_doc_dig
+                    }}</mat-option>
                 </mat-select>
               </mat-form-field>
 
