--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -31,7 +31,6 @@
           </div>
           <div class="monitoring__text">
             <p class="">Monitoreando...</p>
-            <small>Procesando: </small>
           </div>
         </div>
       </div>
@@ -76,8 +75,8 @@
           </div>
           <div class="form__item">
             <mat-form-field class="w-full">
-              <mat-label>Grupo</mat-label>
-              <mat-select formControlName="grupo" [disabled]="formFiltrosDigitalizador.get('grupo')?.disabled ?? false">
+              <mat-label>Tipos</mat-label>
+              <mat-select formControlName="tipo">
                 <mat-option value="">- Selecciona una opción -</mat-option>
                 @for (tdd of tipos; track tdd) {
                 <mat-option [value]="tdd.id">{{tdd.tipo_doc_dig}}</mat-option>
@@ -93,12 +92,15 @@
           <div class="form__item">
             <mat-form-field class="w-full">
               <mat-label>Grupo</mat-label>
-              <mat-select formControlName="grupo">
+              <mat-select formControlName="grupo" [disabled]="formFiltrosDigitalizador.get('tipo')?.disabled ?? false">
                 <mat-option value="">- Selecciona una opción -</mat-option>
                 @for (grupo of grupos; track grupo) {
                 <mat-option [value]="grupo.nombre_archivo_upload">{{grupo.nombre_archivo_upload}}</mat-option>
                 }
               </mat-select>
+              <mat-hint *ngIf="formFiltrosDigitalizador.get('grupo')?.disabled">
+                Selecciona un tipo y fechas válidas para habilitar
+              </mat-hint>
             </mat-form-field>
           </div>
         </div>
@@ -210,16 +212,31 @@
                 </div>
               </div>
               <div class="form__row">
+                <mat-form-field class="w-full">
+                  <mat-label>Tipo Documento a Digitalizar</mat-label>
+                  <mat-select class="w-full" formControlName="tipo">
+                    <mat-option class="w-full" *ngFor="let tipo of tipos" [value]="tipo.id">{{ tipo.tipo_doc_dig
+                      }}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="form__row">
                 <div class="form__item">
-                  <div class="form__item">
-                    <mat-form-field class="w-full">
-                      <mat-label>Extension</mat-label>
-                      <mat-select class="" formControlName="extension">
-                        <mat-option class="" *ngFor="let extension of extensiones" [value]="extension.nombre">{{
-                          extension.nombre }}</mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                  </div>
+                  <mat-form-field class="w-full">
+                    <mat-label>Expresión Regular</mat-label>
+                    <input matInput formControlName="regexCurp" />
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="form__row">
+                <div class="form__item">
+                  <mat-form-field class="w-full">
+                    <mat-label>Extensión</mat-label>
+                    <mat-select class="" formControlName="extension">
+                      <mat-option class="" *ngFor="let extension of extensiones" [value]="extension.nombre">{{
+                        extension.nombre }}</mat-option>
+                    </mat-select>
+                  </mat-form-field>
                 </div>
                 <div class="form__item">
                   <mat-form-field class="w-full">
@@ -280,17 +297,9 @@
         <div class="flex flex-col items-center justify-center">
           <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
             <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-              Upload - Esperados por Tipo Documento
+              Importación de archivos esperados
             </h3>
             <form [formGroup]="myForm_Upload" class="flex items-center justify-between flex-wrap gap-2">
-
-              <mat-form-field class="w-full">
-                <mat-label>Tipo Documento a Digitalizar</mat-label>
-                <mat-select class="w-full" formControlName="id_tipo_doc_dig">
-                  <mat-option class="w-full" *ngFor="let tipo of tipos" [value]="tipo.id">{{ tipo.tipo_doc_dig
-                    }}</mat-option>
-                </mat-select>
-              </mat-form-field>
 
               <div class="card">
                 <div class="card-body">
