--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -92,7 +92,7 @@
           <div class="form__item">
             <mat-form-field class="w-full">
               <mat-label>Grupo</mat-label>
-              <mat-select formControlName="grupo" [disabled]="formFiltrosDigitalizador.get('tipo')?.disabled ?? false">
+              <mat-select formControlName="grupo">
                 <mat-option value="">- Selecciona una opción -</mat-option>
                 @for (grupo of grupos; track grupo) {
                 <mat-option [value]="grupo.nombre_archivo_upload">{{grupo.nombre_archivo_upload}}</mat-option>
@@ -299,28 +299,22 @@
             <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
               Importación de archivos esperados
             </h3>
-            <form [formGroup]="myForm_Upload" class="flex items-center justify-between flex-wrap gap-2">
 
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex flex-column flex-md-row align-items-center justify-content-between"
-                    style="gap: 10px;">
+            <form [formGroup]="myForm_Upload" class="my-3">
+              <div class="form__row">
+                <div class="form__item">
+                  <button mat-raised-button class="w-full">
+                    <label for="txtFile" class="w-full text-nowrap">
+                      Importar Archivos Esperados XLSX
+                    </label>
                     <div>
-                      <label for="txtFile" class="btn">
-                        <i
-                          class="fa fa-cloud-upload bg-orange-300 hover:bg-green-350 text-white font-bold py-2 px-4 rounded">
-                          Importar Archivos Esperados XLSX
-                        </i>
-                      </label>
-                      <div class="input-group">
-                        <input type="file" #fileInput id="txtFile" accept=".xls,.xlsx" style="display:none;" name="file"
-                          formControlName="file" (change)="onFileSelected($event)">
-                      </div>
-                      <div *ngIf="lblUploadingFile" style="margin: 0;font-size: 18px;color: #5270ae;">
-                        <label style="font-weight: 500;">{{lblUploadingFile}}</label>
-                      </div>
+                      <input type="file" #fileInput id="txtFile" accept=".xls,.xlsx" style="display:none;" name="file"
+                        formControlName="file" (change)="onFileSelected($event)">
                     </div>
-                  </div>
+                  </button>
+                </div>
+                <div class="form__item">
+                  <button mat-raised-button (click)="downloadPlantilla()">Descargar plantilla</button>
                 </div>
               </div>
             </form>
@@ -330,7 +324,7 @@
       </div>
       <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
         <button (click)="toggleModal_UploadEsperadosTipoArchivo()" type="button"
-          class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+          class="w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancel
         </button>
       </div>
