--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -224,8 +224,8 @@
                   <div class="form__row mt-2">
                     <div class="form__item">
                       <mat-form-field class="w-full">
-                        <mat-label>CURP</mat-label>
-                        <input matInput formControlName="curp" placeholder="Ej. ABCD123456HDFXYZ01">
+                        <mat-label>Nombre del archivo</mat-label>
+                        <input matInput formControlName="curp" placeholder="Nombre del archivo">
                         <mat-error *ngIf="formCaratula.get('curp')?.hasError('pattern')">
                           Ingresa una CURP válida (18 caracteres alfanuméricos).
                         </mat-error>
@@ -274,15 +274,18 @@
               Confirmar impresión de carátulas
             </h3>
 
+            <div class="flex items-center justify-between">
+              <mat-checkbox (change)="toggleSeleccionarTodos($event, seleccionCaratulas)">Todos</mat-checkbox>
+              <p>
+                {{seleccionCaratulas.selectedOptions.selected.length}} Seleccionados
+              </p>
+            </div>
+
             <mat-selection-list #seleccionCaratulas>
               @for (caratula of caratulas; track caratula) {
               <mat-list-option [value]="caratula">{{caratula}}</mat-list-option>
               }
             </mat-selection-list>
-
-            <p>
-              Options selected: {{seleccionCaratulas.selectedOptions.selected.length}}
-            </p>
           </div>
         </div>
       </div>
@@ -291,9 +294,13 @@
           class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
           Imprimir
         </button>
+        <button (click)="downloadXlsx(getSelectedValues(seleccionCaratulas.selectedOptions.selected))" type="button"
+          class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
+          XLSX
+        </button>
         <button (click)="toggleModalConfirmarCaratula()" type="button"
           class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-          Cancel
+          Cancelar
         </button>
       </div>
     </div>
