--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -225,7 +225,7 @@
                     <div class="form__item">
                       <mat-form-field class="w-full">
                         <mat-label>Nombre del archivo</mat-label>
-                        <input matInput formControlName="curp" placeholder="Nombre del archivo">
+                        <input matInput formControlName="curp" placeholder="Nombre del archivo" (keyup)="toUpperCaseCurp($event)">
                         <mat-error *ngIf="formCaratula.get('curp')?.hasError('pattern')">
                           Ingresa una CURP válida (18 caracteres alfanuméricos).
                         </mat-error>
@@ -298,7 +298,7 @@
           class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
           XLSX
         </button>
-        <button (click)="toggleModalConfirmarCaratula()" type="button"
+        <button (click)="cancelarConfirmarCaratula()" type="button"
           class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
           Cancelar
         </button>
