Estilo de caratula y proceso mejorado

--- a/src/app/pages/digitalizador/digitalizador.component.html
+++ b/src/app/pages/digitalizador/digitalizador.component.html
@@ -277,7 +277,7 @@
             <div class="flex items-center justify-between">
               <mat-checkbox (change)="toggleSeleccionarTodos($event, seleccionCaratulas)">Todos</mat-checkbox>
               <p>
-                {{seleccionCaratulas.selectedOptions.selected.length}} Seleccionados
+                {{seleccionCaratulas.selectedOptions.selected.length}} Seleccionados de {{ caratulas.length }}
               </p>
             </div>
 
