--- a/src/app/pages/digitalizador/digitalizador.component.scss
+++ b/src/app/pages/digitalizador/digitalizador.component.scss
@@ -32,8 +32,9 @@
 
 .digitalizador__toolbar,
 .digitalizador__estado,
+.pendientes,
 .busqueda {
-  padding: 20px 10px;
+  padding: 1.5rem 1rem;
   border-radius: 4px;
   border: 1px solid rgba(3, 7, 18, 0.08);
   box-shadow: 0px 1px 1px rgba(3, 7, 18, 0.08),
@@ -43,10 +44,23 @@
     0px 32px 24px rgba(3, 7, 18, 0.02);
 }
 
+.listas {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  row-gap: 1rem;
+}
+
+.pendientes,
 .busqueda {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+
   &__list {
     overflow-y: scroll;
-    max-height: 400px;
 
     &__item {
       display: flex;
@@ -63,7 +77,24 @@
       }
     }
   }
+
+  &__form {
+    max-width: 100%;
+  }
 }
+
+.pendientes {
+  &__list {
+    max-height: 300px;
+  }
+}
+
+.busqueda {
+  &__list {
+    max-height: 100px;
+  }
+}
+
 
 .form {
   display: flex;
@@ -75,6 +106,7 @@
     flex-direction: column;
     row-gap: 1rem;
   }
+
   &__row--short {
     display: flex;
     flex-direction: column;
@@ -84,26 +116,82 @@
   &__item {
     width: 100%;
   }
+
   &__item--short {
     width: auto;
   }
 }
 
-.chart {
+.info {
+  margin-top: 1rem;
   display: flex;
   justify-content: space-around;
+  align-items: flex-start;
+  column-gap: 1rem;
+}
+
+.chart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 2rem;
+}
+
+.esperadas {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  row-gap: 1rem;
+
+  &__list {
+    width: 100%;
+    max-height: 300px;
+    overflow-y: scroll;
+  }
+
+  &__item {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 1rem;
+  }
+
+  &__modulos {
+    font-weight: 300;
+    font-size: 1rem;
+  }
+
+  &__cantidad {
+    font-weight: 600;
+    font-size: 1rem;
+  }
 }
 
 .numeros {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  column-gap: 2rem;
 
   &__item {
     display: flex;
-    justify-content: flex-start;
-    column-gap: 1rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 1rem;
+  }
+
+  &__numero {
+    font-weight: 600;
+    font-size: 1rem;
+  }
+
+  &__texto {
+    font-weight: 300;
+    font-size: 1rem;
   }
 }
 
@@ -125,6 +213,13 @@
     align-items: flex-start;
     justify-content: flex-start;
     line-height: 1;
+  }
+}
+
+.caratulas {
+  &__list {
+    max-height: 400px;
+    overflow-y: scroll;
   }
 }
 
